<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    tools:context=".activity.LoginActivity">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_2sdp"

        android:src="@drawable/new_logo" />

    <ImageView
        android:id="@+id/img_bottom_moon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-370dp"
        android:src="@drawable/bottom_moon" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/gif_logo"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_18sdp" />


            <LinearLayout
                android:id="@+id/layout_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_how_it_works"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_bg_button"
                    android:fontFamily="@font/teko_medium"
                    android:text="@string/how_it_works"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />

                <Button
                    android:id="@+id/btn_tutorial_video"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_bg_button"
                    android:fontFamily="@font/teko_medium"
                    android:text="@string/tutorial_video"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />


            </LinearLayout>

            <EditText
                android:id="@+id/edt_email_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_btns"
                android:background="@drawable/edittext_border_selector"
                android:fontFamily="@font/teko_medium"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:id="@+id/layout_edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_email_add"
                android:layout_marginTop="@dimen/_20sdp">
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border_selector"
                android:fontFamily="@font/teko_medium"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_14sdp" />

            <ImageView
                android:id="@+id/img_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/drawable_hide_show_pass"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_edt_pass"
                android:layout_alignParentRight="true"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_forgot_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/drawable_bg_button"
                android:fontFamily="@font/teko_medium"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16sdp" />


            <LinearLayout
                android:id="@+id/layout_login_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/img_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/new_ic_facebook" />

                <ImageView
                    android:id="@+id/img_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/new_ic_googleplus" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_login_options"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_70sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_new_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txt_register_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_toRightOf="@+id/txt_new_user"
                    android:text="@string/register_now"
                    android:fontFamily="@font/teko_medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14sdp" />
            </RelativeLayout>
        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>