<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    tools:context=".activity.LoginActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_2sdp"
        android:src="@drawable/new_logo" />


    <ImageView
        android:id="@+id/img_bottom_moon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-370dp"
        android:src="@drawable/bottom_moon" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/gif_logo"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_18sdp" />


      <!--      <LinearLayout
                android:id="@+id/layout_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_how_it_works"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_bg_button"
                    android:fontFamily="@font/teko_medium"
                    android:text="@string/how_it_works"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />

                <Button
                    android:id="@+id/btn_tutorial_video"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_bg_button"
                    android:fontFamily="@font/teko_medium"
                    android:text="@string/tutorial_video"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />


            </LinearLayout>
-->
            <RelativeLayout
                android:id="@+id/layout_quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/txt_quote"
                    android:layout_alignBottom="@+id/txt_quote"
                    android:alpha="0.1"
                    android:background="@drawable/drawable_signup_quote_bg" />

                <TextView
                    android:id="@+id/txt_quote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:text="@string/signup_quote"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_11sdp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_quote"
                android:background="@drawable/edittext_border_selector"
                android:fontFamily="@font/teko_medium"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:padding="@dimen/_10sdp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/edt_email_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_user_name"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/edittext_border_selector"
                android:fontFamily="@font/teko_medium"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_14sdp"/>

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_email_add"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/edittext_border_selector"
                android:fontFamily="@font/teko_medium"
                android:hint="@string/add"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress|textCapSentences"
                android:padding="@dimen/_10sdp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_14sdp" />


            <RelativeLayout
                android:id="@+id/layout_edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_address"
                android:layout_marginTop="@dimen/_20sdp">
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border_selector"
                    android:fontFamily="@font/teko_medium"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/_14sdp" />

                <ImageView
                    android:id="@+id/img_show_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/drawable_hide_show_pass"/>
            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/layout_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_edt_pass"
                android:layout_marginTop="@dimen/_20sdp">

                <ImageView
                    android:id="@+id/img_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/drawable_checkbox_selector" />

                <TextView
                    android:id="@+id/txt_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toRightOf="@+id/img_checkbox"
                    android:text="@string/agreement_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_10sdp" />


            </RelativeLayout>
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_agreement"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/drawable_bg_button"
                android:fontFamily="@font/teko_medium"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16sdp" />
            <LinearLayout
                android:id="@+id/layout_login_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_signup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_with"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/img_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/new_ic_facebook" />

                <ImageView
                    android:id="@+id/img_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/new_ic_googleplus" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_login_options"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_70sdp"

                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/existing_user"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="@string/login_underline"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/teko_medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>
        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>